# python-entitled

./: .gitignore  .pre-commit-config.yaml  .styleci.yml  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-app.yml  testing-and-quality.yml
entitled/: __init__.py  client.py  exceptions.py  old_client.py  old_policies.py  policies.py  policiesv1.py  response.py  roles.py  rules.py  rulesv1.py
example/: pyproject.toml
example/src/: main.py  models.py
example/src/policies/: list_policy.py
tests/: conftest.py  fixtures.py  test_client.py  test_main.py  test_policies.py  test_rules.py  testmodels.py
tests/data/: factories.py  models.py  policies.py
tests/fixtures/: factories.py  fixtures.py  models.py  policies.py
